Remove Sync related fields
