# resources/quotas.go
@@ -59,14 +59,6 @@ func getResourceQuotaSchema() map[string]*schema.Schema {
 			Description: ``,
 		},
 
-		"sync_state": &schema.Schema{
-			Type: schema.TypeString,
-
-			Computed:    true,
-			Optional:    true,
-			Description: ``,
-		},
-
 		"pretty_state": &schema.Schema{
 			Type: schema.TypeString,
 
@@ -597,18 +589,6 @@ func ResourceQuotaReadStructIntoSchema(ctx context.Context, resource api_latest.
 		diags = append(diags, diag.Diagnostic{
 			Severity: diag.Error,
 			Summary:  "Error occured setting value to \"state\"",
-			Detail:   err.Error(),
-		})
-	}
-
-	tflog.Info(ctx, fmt.Sprintf("%v - %v", "SyncState", resource.SyncState))
-
-	err = d.Set("sync_state", resource.SyncState)
-
-	if err != nil {
-		diags = append(diags, diag.Diagnostic{
-			Severity: diag.Error,
-			Summary:  "Error occured setting value to \"sync_state\"",
 			Detail:   err.Error(),
 		})
 	}
