# resources/viewpolicies.go
@@ -451,14 +451,6 @@ func getResourceViewPolicySchema() map[string]*schema.Schema {
 			Description: `Frequency for updating the atime attribute of NFS files. atime is updated on read operations if the difference between the current time and the file's atime value is greater than the atime frequency. Specify as time in seconds.`,
 		},
 
-		"sync": &schema.Schema{
-			Type: schema.TypeString,
-
-			Computed:    true,
-			Optional:    true,
-			Description: `Synchronization state with leader`,
-		},
-
 		"vip_pools": &schema.Schema{
 			Type: schema.TypeList,
 
@@ -469,14 +461,6 @@ func getResourceViewPolicySchema() map[string]*schema.Schema {
 			Elem: &schema.Schema{
 				Type: schema.TypeInt,
 			},
-		},
-
-		"sync_time": &schema.Schema{
-			Type: schema.TypeString,
-
-			Computed:    true,
-			Optional:    true,
-			Description: `Synchronization time with leader`,
 		},
 
 		"nfs_minimal_protection_level": &schema.Schema{
@@ -1171,18 +1155,6 @@ func ResourceViewPolicyReadStructIntoSchema(ctx context.Context, resource api_la
 		})
 	}
 
-	tflog.Info(ctx, fmt.Sprintf("%v - %v", "Sync", resource.Sync))
-
-	err = d.Set("sync", resource.Sync)
-
-	if err != nil {
-		diags = append(diags, diag.Diagnostic{
-			Severity: diag.Error,
-			Summary:  "Error occured setting value to \"sync\"",
-			Detail:   err.Error(),
-		})
-	}
-
 	tflog.Info(ctx, fmt.Sprintf("%v - %v", "VipPools", resource.VipPools))
 
 	err = d.Set("vip_pools", utils.FlattenListOfPrimitives(&resource.VipPools))
@@ -1191,18 +1163,6 @@ func ResourceViewPolicyReadStructIntoSchema(ctx context.Context, resource api_la
 		diags = append(diags, diag.Diagnostic{
 			Severity: diag.Error,
 			Summary:  "Error occured setting value to \"vip_pools\"",
-			Detail:   err.Error(),
-		})
-	}
-
-	tflog.Info(ctx, fmt.Sprintf("%v - %v", "SyncTime", resource.SyncTime))
-
-	err = d.Set("sync_time", resource.SyncTime)
-
-	if err != nil {
-		diags = append(diags, diag.Diagnostic{
-			Severity: diag.Error,
-			Summary:  "Error occured setting value to \"sync_time\"",
 			Detail:   err.Error(),
 		})
 	}
